plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.swulion'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	/* 소셜 로그인(OAuth2)을 위해 추가 */
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	/* 유효성 검사를 위해 추가 */
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	/* Spring Security 사용을 위해 추가 */
	implementation 'org.springframework.boot:spring-boot-starter-security'
	/* JWT 사용을 위해 추가 */
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	/* Redis 사용을 위해 추가 */
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	/* QueryDSL 사용을 위해 추가 */
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'
	testImplementation platform('org.testcontainers:testcontainers-bom:1.20.3')
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mysql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// DB 드라이버 (MySQL)
	runtimeOnly 'com.mysql:mysql-connector-j'

	// 인메모리 H2 데이터베이스
	implementation 'com.h2database:h2'

	// Netty 클래스 누락 해결을 위해 명시적으로 추가
	implementation 'io.netty:netty-handler'

}

// QueryDSL
sourceSets{
	main{
		java{
			srcDirs = ["src/main/java"]
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}


